--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,700,900&display=swap');
+
+* {
+  font-family: 'Nunito', sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #EAF0FF;
 }
 
 code {
